# LibreAlly

./: .gitignore  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUIDE.md  LICENSE  LICENSE.md  README.en.md  README.md  ROADMAP.md  SECURITY.md  capacitor.config.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: accessibilite.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: build-native.yml  pages.yml
apps/a11y-core/: README.md
apps/calmspace/: README.md
apps/captilive/: README.md
apps/coloraide/: README.md
apps/dayflow/: README.md
apps/dysreader/: README.md
apps/gazetype/: README.md
apps/lumen/: README.md
apps/mathease/: README.md
apps/parlo/: README.md
apps/remindwell/: README.md
apps/signlearn/: README.md
apps/soundwatch/: README.md
apps/steadytouch/: README.md
apps/switchboard/: README.md
apps/voxread/: README.md
docs/: 00-vision-mission.en.md  00-vision-mission.md  01-principes-accessibilite.md  02-personas-besoins.md  03-architecture-technique.md  04-a11y-core-bibliotheque.md  05-suite-vue-ensemble.md  06-gouvernance.md  07-financement-perennite.md  08-impact-ethique.md  09-feuille-de-route.md  10-charte-visuelle.md
docs/apps/: 01-parlo-aac.md  02-lumen-malvoyance.md  03-voxread-lecture.md  04-coloraide-daltonisme.md  05-captilive-soustitres.md  06-soundwatch-alertes.md  07-signlearn-langue-signes.md  08-switchboard-contacteur.md  09-gazetype-occulaire.md  10-steadytouch-tremblements.md  11-dysreader-dyslexie.md  12-mathease-dyscalculie.md  13-dayflow-routines.md  14-calmspace-sensoriel.md  15-remindwell-memoire.md
site/: index.html
site/assets/: tokens.css
site/calmspace/: index.html  manifest.webmanifest  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+42 files in other folders)
